[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/alagard.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/XpSystem.gd" type="Script" id=2]
[ext_resource path="res://Sprites/XpBar.png" type="Texture" id=3]
[ext_resource path="res://Sprites/XpBarXP.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 32.0156

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[sub_resource type="CircleShape2D" id=5]
radius = 12.1655

[node name="XpSystem" type="Node2D"]
script = ExtResource( 2 )

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Layer" type="Node2D" parent="CanvasLayer"]

[node name="Label" type="Label" parent="CanvasLayer/Layer"]
margin_left = 864.0
margin_top = 6.0
margin_right = 959.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Level 0"

[node name="ProgressBar" type="TextureProgress" parent="CanvasLayer/Layer"]
margin_left = 19.0
margin_top = -4.0
margin_right = 849.0
margin_bottom = 36.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
texture_progress_offset = Vector2( 1, 0 )
nine_patch_stretch = true
stretch_margin_left = 3
stretch_margin_right = 3

[node name="PickUpArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource( 3 )

[node name="PushBody" type="KinematicBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PushBody"]
shape = SubResource( 5 )
disabled = true

[connection signal="area_entered" from="DetectionArea" to="." method="_on_DetectionArea_area_entered"]
[connection signal="area_entered" from="PickUpArea" to="." method="_on_PickUpArea_area_entered"]
